fixed header spacing

--- a/03week/airplane/css/style.css
+++ b/03week/airplane/css/style.css
@@ -8,6 +8,10 @@ header {
     border-bottom: white solid 2px;
 }
 
+nav img {
+    margin-left: 30px;
+}
+
 .logo {
     float: left;
     margin-left: 100px;
